--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -759,16 +759,16 @@ a {
   transition: color 0.6s;
 }
 .cid-s9fno6oRhs {
-  background-image: url("../../../assets/images/mbr-2-1920x1200.jpg");
+  background-image: url("../../../assets/images/mbr-1-1920x1200.jpg");
 }
 .cid-s9fno6oRhs .mbr-text,
 .cid-s9fno6oRhs .mbr-section-btn {
   text-align: center;
-  color: #e43f3f;
+  color: #ffffff;
 }
 .cid-s9fno6oRhs .mbr-section-title {
   text-align: center;
-  color: #ffffff;
+  color: #e6c63b;
 }
 .cid-s9gvnrbC18 {
   padding-top: 4rem;
